--- a/Mini_projet.csproj
+++ b/Mini_projet.csproj
@@ -70,6 +70,36 @@
     <Compile Include="Cherché_Adherent.Designer.cs">
       <DependentUpon>Cherché_Adherent.cs</DependentUpon>
     </Compile>
+    <Compile Include="Coach 1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Coach 1.Designer.cs">
+      <DependentUpon>Coach 1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="coach2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="coach2.Designer.cs">
+      <DependentUpon>coach2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Coach3.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Coach3.Designer.cs">
+      <DependentUpon>Coach3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="coach4.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="coach4.Designer.cs">
+      <DependentUpon>coach4.cs</DependentUpon>
+    </Compile>
+    <Compile Include="coach5.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="coach5.Designer.cs">
+      <DependentUpon>coach5.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="suprimer_adherent.cs">
@@ -95,6 +125,21 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Cherché_Adherent.resx">
       <DependentUpon>Cherché_Adherent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Coach 1.resx">
+      <DependentUpon>Coach 1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="coach2.resx">
+      <DependentUpon>coach2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Coach3.resx">
+      <DependentUpon>Coach3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="coach4.resx">
+      <DependentUpon>coach4.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="coach5.resx">
+      <DependentUpon>coach5.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
