--- a/Mini_projet.csproj
+++ b/Mini_projet.csproj
@@ -70,6 +70,12 @@
     <Compile Include="Cherché_Adherent.Designer.cs">
       <DependentUpon>Cherché_Adherent.cs</DependentUpon>
     </Compile>
+    <Compile Include="Coach22.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Coach22.Designer.cs">
+      <DependentUpon>Coach22.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="suprimer_adherent.cs">
@@ -95,6 +101,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Cherché_Adherent.resx">
       <DependentUpon>Cherché_Adherent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Coach22.resx">
+      <DependentUpon>Coach22.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
