--- a/Mini_projet.csproj
+++ b/Mini_projet.csproj
@@ -76,6 +76,12 @@
     <Compile Include="Coach22.Designer.cs">
       <DependentUpon>Coach22.cs</DependentUpon>
     </Compile>
+    <Compile Include="heeyyyy.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="heeyyyy.Designer.cs">
+      <DependentUpon>heeyyyy.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="suprimer_adherent.cs">
@@ -104,6 +110,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Coach22.resx">
       <DependentUpon>Coach22.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="heeyyyy.resx">
+      <DependentUpon>heeyyyy.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
