--- a/Mini_projet.csproj
+++ b/Mini_projet.csproj
@@ -90,6 +90,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="qrst.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="qrst.Designer.cs">
+      <DependentUpon>qrst.cs</DependentUpon>
+    </Compile>
     <Compile Include="suprimer_adherent.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -132,6 +138,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="qrst.resx">
+      <DependentUpon>qrst.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="suprimer_adherent.resx">
       <DependentUpon>suprimer_adherent.cs</DependentUpon>
     </EmbeddedResource>
