--- a/Mini_projet.csproj
+++ b/Mini_projet.csproj
@@ -88,6 +88,12 @@
     <Compile Include="heeyyyy.Designer.cs">
       <DependentUpon>heeyyyy.cs</DependentUpon>
     </Compile>
+    <Compile Include="IMNADA.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="IMNADA.Designer.cs">
+      <DependentUpon>IMNADA.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="qrst.cs">
@@ -134,6 +140,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="heeyyyy.resx">
       <DependentUpon>heeyyyy.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="IMNADA.resx">
+      <DependentUpon>IMNADA.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
