--- a/Mini_projet.csproj
+++ b/Mini_projet.csproj
@@ -94,6 +94,11 @@
     <Compile Include="halaessai.Designer.cs">
       <DependentUpon>halaessai.cs</DependentUpon>
     </Compile>
+    <Compile Include="miniprojet1DataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>miniprojet1DataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -156,6 +161,17 @@
     <EmbeddedResource Include="wi1.resx">
       <DependentUpon>wi1.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="miniprojet1DataSet.xsc">
+      <DependentUpon>miniprojet1DataSet.xsd</DependentUpon>
+    </None>
+    <None Include="miniprojet1DataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>miniprojet1DataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="miniprojet1DataSet.xss">
+      <DependentUpon>miniprojet1DataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
